--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Bootstrap - Prebuilt Layout</title>
 
 <!-- Bootstrap -->
-<link href="../../Unnamed Site 2/css/bootstrap.css" rel="stylesheet">
+<link href="/css/bootstrap.css" rel="stylesheet">
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -66,7 +66,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <h1 class="text-center">Bootstrap with Dreamweaver</h1>
+      <h1 class="text-center">Bootstrap </h1>
     </div>
   </div>
   <hr>
@@ -118,9 +118,9 @@
   <hr>
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-<script src="../../Unnamed Site 2/js/jquery-1.11.3.min.js"></script>
+<script src="/js/jquery-1.11.3.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
-<script src="../../Unnamed Site 2/js/bootstrap.js"></script>
+<script src="/js/bootstrap.js"></script>
 </body>
 </html>
