--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 <title>Bootstrap - Prebuilt Layout</title>
 
 <!-- Bootstrap -->
-<link href="/css/bootstrap.css" rel="stylesheet">
+<link href="css/bootstrap.css" rel="stylesheet">
+      <link href="css/styles.css" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+     
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -118,9 +121,9 @@
   <hr>
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-<script src="/js/jquery-1.11.3.min.js"></script>
+<script src="js/jquery-1.11.3.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
-<script src="/js/bootstrap.js"></script>
+<script src="js/bootstrap.js"></script>
 </body>
 </html>
