--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
        <div class="navbar-wrapper">
-      <div class="container">
+      <div class="container-fluid">
 
         <nav class="navbar navbar-inverse navbar-static-top">
           <div class="container">
