--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <title>Bootstrap - Prebuilt Layout</title>
 
 <!-- Bootstrap -->
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css>
-      <link href="css/styles.css" rel="stylesheet" type="text/css>
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+      <link href="css/styles.css" rel="stylesheet" type="text/css">
  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
      
 
