--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </ol>
 
     <!-- Wrapper for slides -->
-    <div class="carousel-inner">
+    <div class="carousel-inner custom">
 
       <div class="item active">
         <img src="images/pic.jpg" alt="Los Angeles" style="width:100%;">
