--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <![endif]-->
 </head>
 <body>
-<nav class="navbar navbar-default custom">
+<nav class="navbar navbar-default">
   <div class="container-fluid"> 
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -77,7 +77,7 @@
     </ol>
 
     <!-- Wrapper for slides -->
-    <div class="carousel-inner custom">
+    <div class="carousel-inner">
 
       <div class="item active">
         <img src="images/pic.jpg" alt="Los Angeles" style="width:100%;">
