--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
     <![endif]-->
 </head>
 <body>
+      <div class="container-fluid">
+        <div class="row">
+              <div class="top-menu">
+                <ul>
+                      <li><a href="tel:+35388224422"><i class="fa fa-phone "></i> 08-8224422></a></li>    
+                      <li><a href="tel:+35388224422"><i class="fa fa-envelope"></i> 08-8224422></a></li> 
+                      <li><a href="tel:+35388224422"><i class="fa fa-facebook fa-lg"></i> 08-8224422></a></li> 
+                     
+                    </ul>
+              </div>
+        </div>
+      </div>
 <nav class="navbar navbar-default">
   <div class="container-fluid"> 
     <!-- Brand and toggle get grouped for better mobile display -->
