--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container-fluid">
         <div class="row">
               <div class="top-menu">
-                <ul>
+                <ul class="top-menu-items">
                       <li><a href="tel:+35388224422"><i class="fa fa-phone "></i> 08-8224422></a></li>    
                       <li><a href="tel:+35388224422"><i class="fa fa-envelope"></i> 08-8224422></a></li> 
                       <li><a href="tel:+35388224422"><i class="fa fa-facebook fa-lg"></i> 08-8224422></a></li> 
