--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 </head>
 <body>
       <div class="container-fluid">
-        <div class="row">
               <div class="top-menu">
+                    <div class="row">
                 <ul class="top-menu-items">
                       <li><a href="tel:+35388224422"><i class="fa fa-phone "></i> 08-8224422></a></li>    
-                      <li><a href="tel:+35388224422"><i class="fa fa-envelope"></i> 08-8224422></a></li> 
+                      <li><a href="mailto:email@email.com"><i class="fa fa-envelope"></i> info@earthtoplateorganics.com></a></li> 
                       <li><a href="tel:+35388224422"><i class="fa fa-facebook fa-lg"></i> 08-8224422></a></li> 
                      
                     </ul>
