--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 
 <!-- Bootstrap -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-      <link href="css/styles.css" rel="stylesheet" type="text/css">
+ <!-- Custom style sheet -->     
+ <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <!-- Using google fonts to load Raleway font -->    
  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-     
+  <!-- Using awesome fonts from local directory -->    
+ <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">   
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
