--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
        <div class="row">
               <div class="top-menu">
                 <ul class="top-menu-items">
-                      <li><a href="tel:+35388224422"><i class="fa fa-phone "></i> 08-8224422></a></li>    
-                      <li><a href="mailto:email@email.com"><i class="fa fa-envelope"></i> info@earthtoplateorganics.com></a></li> 
-                      <li><a href="tel:+35388224422"><i class="fa fa-facebook fa-lg"></i> 08-8224422></a></li> 
-                     
+                      <li><a href="tel:+35388224422"><i class="fa fa-phone fa-2x" aria-hidden="true"></i> 08-8224422</a></li>    
+                      <li><a href="mailto:email@email.com"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i> info@earthtoplateorganics.com</a></li> 
+                      <li><a href="tel:+35388224422"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i> Facebook</a></li> 
                     </ul>
               </div>
         </div>
