--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
  
  <div class="clearfix"></div>
 
-  <div class="container-custom">
+  <div class="container-custom2">
    <div class="col-md-6">
    <h2>About Us</h2>
     <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
