--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
   <div class="container-custom">
    <!-- Set a row  -->
    <div class="row">
+    <h2>Welcome to ................</h2>
     <!-- use 4 columns -->
     <div class="col-sm-3">
      <h3>Farm Shop</h3>
@@ -159,7 +160,7 @@
  
  <div class="clearfix"></div>
 
-  <div class="container-custom2">
+  <div class="container-custom2 text-left">
    <div class="col-md-6">
    <h2>About Us</h2>
     <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
