--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
       </div>
 <!-- This class is for background  -->
  <div class="container-home">
+  <div class="container-new">
  <!-- This class is for setting custom container  -->
   <div class="container-custom">
    <!-- Set a row  -->
@@ -157,9 +158,10 @@
    </div> 
   </div>
       </div>
+ </div>
  
  <div class="clearfix"></div>
-
+<div class="container-new">
   <div class="container-custom2 text-left">
    <div class="col-md-6">
    <h2>About Us</h2>
@@ -224,9 +226,10 @@
 
     </div><!-- panel-group -->
  </div>
+ </div>
  
  <div class="clearfix"></div>
-   
+   <div class="container-new">
    <div class="container-custom">
     <div class="row">
      <div class="col-sm-4">
@@ -247,6 +250,7 @@
      <div class="clearfix"></div>
     </div>
    </div>
+ </div>
    
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
