--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     <div class="collapse navbar-collapse" id="defaultNavbar1">
       <ul class="nav navbar-nav navbar-center">
         <li><a href="#">Link</a></li>
+       <li><a href="#">Link</a></li>
+       <li><a href="#">Link</a></li>
+       <li><a href="#">Link</a></li>
         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="#">Action</a></li>
