--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <a class="navbar-brand" href="#">Brand</a></div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="defaultNavbar1">
-      <ul class="nav navbar-nav navbar-center">
+      <ul class="nav navbar-nav navbar">
         <li><a href="#">Link</a></li>
        <li><a href="#">Link</a></li>
        <li><a href="#">Link</a></li>
