--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
  
  <div class="clearfix"></div>
 <div class="container-new">
-  <div class="container-custom2 text-left">
-   <div class="col-md-6">
+  <div class="container-custom2">
+   <div class="col-md-6 text-left">
    <h2>About Us</h2>
     <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
      Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature,
@@ -154,7 +154,7 @@
     </p>
  </div>
    
-    <div class="col-md-6">
+    <div class="col-md-6 text-left">
      <h2>A little bit more about us ....</h2>
      <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
