--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
   <div class="container-custom2">
    <div class="row">
   <div class="col-md-12 col-sm-12 col-xs-12">
-                <div id="Carousel" class="carousel slide">
+                <div id="Carousel2" class="carousel slide">
                  
                 <ol class="carousel-indicators">
                     <li data-target="#Carousel" data-slide-to="0" class="active"></li>
