--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
    <div class="footer-top">
     <div class="row">
      <div class="social-icons">
- <ul><li><a href="https://www.facebook.com/" target="new"><i class="icon ion-social-facebook"></i> </a></li><li><a href="https://twitter.com/" target="new"><i class="icon ion-social-twitter"></i> </a></li>
-<li><a href="https://plus.google.com/" target="new"><i class="icon ion-social-googleplus"></i> </a></li>
+ <ul><li><a href="https://www.facebook.com/" target="new"><i class="fa fa-facebook" aria-hidden="true"></i> </a></li><li><a href="https://twitter.com/" target="new"><i class="fa fa-twitter" aria-hidden="true"></i> </a></li>
+<li><a href="https://plus.google.com/" target="new"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 </ul>
 </div>
     </div>
@@ -339,12 +339,12 @@
      <div class="col-sm-4 text-left">
       <h4>Contact Us</h4>
      <ul><li>
-         <a href="tel:+353888888"><i class="icon ion-android-phone-portrait"></i>&nbsp; 088-88888</a></li>
+         <a href="tel:+353888888"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp; 088-88888</a></li>
 
          <li>
-         <a href="/contact"><i class="icon ion-email"></i>  Email</a></li>
+         <a href="/contact"><i class="fa fa-envelope" aria-hidden="true"></i>  Email</a></li>
 <li>
-		  <a href="" target="new"><i class="icon ion-ios-location"></i> &nbsp;Address Line 1,<br>Address line 2,<br> Ireland</a></li>
+		  <a href="" target="new"><i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp;Address Line 1,<br>Address line 2,<br> Ireland</a></li>
 </ul>
     </div>
     
