--- a/index.html
+++ b/index.html
@@ -319,9 +319,10 @@
  </div>
  
    <footer>
+	   <div class="row">
      <div class="container-new">
   <div class="container-custom">
-   <div class="footer-top">
+   <div id="footer-top">
     <div class="row">
      <div class="social-icons">
  <ul><li><a href="https://www.facebook.com/" target="new"><i class="fa fa-facebook" aria-hidden="true"></i> </a></li><li><a href="https://twitter.com/" target="new"><i class="fa fa-twitter" aria-hidden="true"></i> </a></li>
@@ -369,12 +370,12 @@
    
    </div>
    
-   <div class="footer-bottom">
+   <div id="footer-bottom">
     <p class="text-center">Copyright 2017 &middot; Company Name</p> 
    </div>
       </div>
     </div>
-    
+	   </div>
    </footer>
  
 </div>
