--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
  </div>
  
    <footer>
-	   <div class="row">
-     <div class="container-new">
+	  
+     <div class="container-footer">
   <div class="container-custom">
    <div id="footer-top">
     <div class="row">
@@ -375,7 +375,7 @@
    </div>
       </div>
     </div>
-	   </div>
+
    </footer>
  
 </div>
