--- a/index.html
+++ b/index.html
@@ -211,8 +211,10 @@
     </div><!-- panel-group -->
  </div>
  </div>
- 
+</div>
  <div class="clearfix"></div>
+	
+	
    <div class="container-new">
    <div class="container-custom">
     <div class="row">
