--- a/index.html
+++ b/index.html
@@ -237,9 +237,10 @@
     </div>
    </div>
  </div>
-   
+	
+   <div class="row">
 	<div class="container-home2">
-  <div class="container-new">
+  
    <div class="container-custom">
     <div class="row">
      <div class="col-sm-4 text-left">
@@ -322,7 +323,7 @@
 	 </div>
    <footer>
 	  
-     <div class="container-footer">
+     <div class="row">
   <div class="container-custom">
    <div id="footer-top">
     <div class="row">
