--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@
  </div>
  
  <div class="clearfix"></div>
-<div class="container-new">
-  <div class="container-custom2">
+<div class="row">
    <div class="col-md-6 text-left">
    <h2>About Us</h2>
     <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
@@ -211,12 +210,10 @@
     </div><!-- panel-group -->
  </div>
  </div>
-</div>
  <div class="clearfix"></div>
 	
 	
-   <div class="container-new">
-   <div class="container-custom">
+
     <div class="row">
      <div class="col-sm-4">
       <h3>What's Happening on the Farm?</h3>
@@ -235,8 +232,7 @@
      
      <div class="clearfix"></div>
     </div>
-   </div>
- </div>
+
 	
    <div class="row">
 	<div class="container-home2">
@@ -265,8 +261,7 @@
  </div>
 </div>
  
- <div class="container-new">
-  <div class="container-custom2">
+
    <div class="row">
   <div class="col-md-12 col-sm-12 col-xs-12">
                 <div id="Carousel2" class="carousel slide">
@@ -319,8 +314,7 @@
  </div>
    
   </div>
- </div>
-	 </div>
+
    <footer>
 	  
      <div class="row">
