--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 
    <!-- Set a row  -->
    <div class="row">
+	   <div classs="container-size1">
 	   <div class="container1">
     <h2>Welcome to ................</h2>
     <!-- use 4 columns -->
@@ -138,10 +139,12 @@
     
    </div> 
 	</div>
+	</div>
 
  <div class="clearfix"></div>
 	
 <div class="row">
+	<div classs="container-size2">
 	<div class="container2">
    <div class="col-md-6 text-left">
    <h2>About Us</h2>
@@ -207,6 +210,7 @@
     </div><!-- panel-group -->
  </div>
  </div>
+	</div>
 	</div>
  <div class="clearfix"></div>
 	
