--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <div class="container-fluid">
        
        <div class="row">
+	       <div class="container-navsize">
               <div class="top-menu">
                 <ul class="top-menu-items">
                       <li><a href="tel:+35388224422"><i class="fa fa-phone" aria-hidden="true"></i> 08-8224422</a></li>    
@@ -60,6 +61,7 @@
         </li>
       </ul>
     </div>
+	 </div>
     <!-- /.navbar-collapse --> 
   </div>
   <!-- /.container-fluid --> 
