--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 
       <div class="container-fluid">
        
-       <div class="row">
-	       <div class="container-navsize">
+       <div class="row"> 
               <div class="top-menu">
                 <ul class="top-menu-items">
                       <li><a href="tel:+35388224422"><i class="fa fa-phone" aria-hidden="true"></i> 08-8224422</a></li>    
@@ -39,6 +38,7 @@
       </div>
  <nav class="navbar navbar-default">
   <div class="container-fluid"> 
+	   <div class="container-navsize">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
@@ -61,7 +61,7 @@
         </li>
       </ul>
     </div>
-	 </div>
+	  </div>
     <!-- /.navbar-collapse --> 
   </div>
   <!-- /.container-fluid --> 
@@ -120,7 +120,7 @@
    <!-- Set a row  -->
    <div class="row">
 	   <div class="container1">
-    <div classs="container-size1">
+    <div class="container-size1">
     <h2>Welcome to ................</h2>
     <!-- use 4 columns -->
     <div class="col-sm-3">
@@ -321,6 +321,7 @@
    <footer>
 	  
      <div class="row">
+	      <div class="container-size2">
    <div id="footer-top">
     <div class="row">
      <div class="social-icons">
@@ -373,7 +374,7 @@
     <p class="text-center">Copyright 2017 &middot; Company Name</p> 
    </div>
       </div>
-
+	   </div>
    </footer>
  
 </div>
