--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 	
 
     <div class="row">
-	  <div class="container3">
+	  <div class="container1">
 		  <div class="container-size1">
      <div class="col-sm-4">
       <h3>What's Happening on the Farm?</h3>
@@ -242,7 +242,7 @@
 	
    <div class="row">
 <div class="container4">
-	<div class="container-size2">
+	<div class="container-size1">
      <div class="col-sm-4 text-left">
       <h3>Supplier from ...?</h3>
       <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
@@ -265,7 +265,7 @@
  
 
    <div class="row">
-	   <div class="container-size2">
+	   <div class="container-size1">
   <div class="col-md-12 col-sm-12 col-xs-12">
                 <div id="Carousel2" class="carousel slide">
                  
@@ -322,7 +322,7 @@
 	  
      <div class="row">
    <div id="footer-top">
-	   <div class="container-size2">
+	   <div class="container-size1">
     <div class="row">
      <div class="social-icons">
  <ul><li><a href="https://www.facebook.com/" target="new"><i class="fa fa-facebook" aria-hidden="true"></i> </a></li><li><a href="https://twitter.com/" target="new"><i class="fa fa-twitter" aria-hidden="true"></i> </a></li>
@@ -369,8 +369,9 @@
     <div class="clearfix"></div>
    
    </div>
-   
+	     </div>
    <div id="footer-bottom">
+	   <div class="container-size2">
     <p class="text-center">Copyright 2017 &middot; Company Name</p> 
    </div>
       </div>
