--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
 		  <a href="" target="new"><i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp;Western Way,<br>Co.Down,<br> Ireland</a></li>
 </ul>
 	 <div class="social-icons">
- <ul><li><a href="https://www.facebook.com/" target="new"><i class="fa fa-facebook" aria-hidden="true"></i> </a></li><li><a href="https://twitter.com/" target="new"><i class="fa fa-twitter" aria-hidden="true"></i> </a></li>
-<li><a href="https://plus.google.com/" target="new"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+ <ul><li><a href="https://www.facebook.com/" target="new"><i class="fa fa-facebook customicon" aria-hidden="true"></i> </a></li><li><a href="https://twitter.com/" target="new"><i class="fa fa-twitter customicon" aria-hidden="true"></i> </a></li>
+<li><a href="https://plus.google.com/" target="new"><i class="fa fa-google-plus customicon" aria-hidden="true"></i></a></li>
 </ul>
 </div>     
 	
