--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
     
      <div class="col-sm-4 text-left">
 	      <h4>Useful Links</h4>
-<ul class="new-list"><li><a href="/"> Home</a></li>
+<ul class="new-list1"><li><a href="/"> Home</a></li>
 
 <li><a href=""> About Us</a></li>
 
@@ -346,7 +346,7 @@
     
      <div class="col-sm-4 text-left">
    <h4>Contact Us</h4>
-     <ul class="new-list"><li>
+     <ul class="new-list2"><li>
          <a href="tel:+353888888"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp; 088-88888</a></li>
 
          <li>
