--- a/index.html
+++ b/index.html
@@ -331,15 +331,18 @@
     
      <div class="col-sm-4 text-left">
 	      <h4>Useful Links</h4>
-<ul class="new-list1"><li><a href="/"> Home</a></li>
+<ul class="new-list1"><li><a href="/"><i class="fa fa-angle-right" aria-hidden="true"></i> Home</a></li>
 
-<li><a href=""> About Us</a></li>
+<li><a href=""><i class="fa fa-angle-right arrow" aria-hidden="true"></i> About Us</a></li>
 
-<li><a href="">Page 2</a></li>
+<li><a href=""><i class="fa fa-angle-right arrow" aria-hidden="true"></i> Why Organic?</a></li>
 
-<li><a href=""> Page 3</a></li>
+<li><a href=""><i class="fa fa-angle-right arrow" aria-hidden="true"></i> Farm Shop</a></li>
+	
+<li><a href=""><i class="fa fa-angle-right arrow" aria-hidden="true"></i> FAQ</a></li>
  
- <li><a href=""> Page 4</a></li>
+ <li><a href=""><i class="fa fa-angle-right arrow" aria-hidden="true"></i> Contact Us</a></li>
+	
 </ul>  
      
     </div>
