--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
     
      <div class="col-sm-4 text-left">
 	      <h4>Useful Links</h4>
-<ul class="new-list1"><li><a href="/"><i class="fa fa-angle-right" aria-hidden="true"></i> Home</a></li>
+<ul class="new-list1"><li><a href="/"><i class="fa fa-angle-right arrow" aria-hidden="true"></i> Home</a></li>
 
 <li><a href=""><i class="fa fa-angle-right arrow" aria-hidden="true"></i> About Us</a></li>
 
