--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
          <li>
          <a href="/contact"><i class="fa fa-envelope" aria-hidden="true"></i>  Email</a></li>
 <li>
-		  <a href="" target="new"><i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp;Western Way,<br>Co.Down,<br> Ireland</a></li>
+		  <a href="" target="new"><i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp;Western Way, Co.Down, Ireland</a></li>
 </ul>
 	 <div class="social-icons">
  <ul><li><a href="https://www.facebook.com/" target="new"><i class="fa fa-facebook customicon" aria-hidden="true"></i> </a></li><li><a href="https://twitter.com/" target="new"><i class="fa fa-twitter customicon" aria-hidden="true"></i> </a></li>
