--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 	  
      <div class="row">
    <div id="footer-top">
-	   <div class="container-size1">
+	   <div class="container-footer">
       
         
     <div class="col-sm-4 text-left">
