--- a/index.html
+++ b/index.html
@@ -46,19 +46,12 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="defaultNavbar1">
       <ul class="nav navbar-nav navbar">
-        <li><a href="#">Link</a></li>
-       <li><a href="#">Link</a></li>
-       <li><a href="#">Link</a></li>
-       <li><a href="#">Link</a></li>
-        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown<span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
+        <li><a href="#">Home</a></li>
+       <li><a href="#">About Us</a></li>
+       <li><a href="#">Why Organic?</a></li>
+	       <li><a href="#">Farm Shop</a></li>
+       <li><a href="#">FAQ</a></li>
+	      <li><a href="#">Contact</a></li>
       </ul>
     </div>
 	  </div>
@@ -265,6 +258,7 @@
  
 
    <div class="row">
+	   <div class="container5">
 	   <div class="container-size1">
   <div class="col-md-12 col-sm-12 col-xs-12">
                 <div id="Carousel2" class="carousel slide">
@@ -311,7 +305,7 @@
                  </div>
                 </div>
 			</div>
-
+	  </div>
                  
   </div>
  </div>
@@ -355,7 +349,7 @@
          <li>
          <a href="/contact"><i class="fa fa-envelope" aria-hidden="true"></i>  Email</a></li>
 <li>
-		  <a href="" target="new"><i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp;Western Way, Co.Down, Ireland</a></li>
+		  <a href="" target="new"><i class="fa fa-map-marker" aria-hidden="true"></i> Western Way, Co.Down, Ireland</a></li>
 </ul>
 	 <div class="social-icons">
  <ul><li><a href="https://www.facebook.com/" target="new"><i class="fa fa-facebook customicon" aria-hidden="true"></i> </a></li><li><a href="https://twitter.com/" target="new"><i class="fa fa-twitter customicon" aria-hidden="true"></i> </a></li>
