--- a/about-us.html
+++ b/about-us.html
@@ -59,6 +59,8 @@
   </div>
   <!-- /.container-fluid --> 
 </nav>
+	
+	 <!-- set another container-fluid --> 
 <div class="container-fluid">
      
    <!-- Set a row  -->
@@ -66,7 +68,7 @@
 	   <p>put columns here inside this row and set new row for each section of your page</p>
     </div>
      
-  </div>
+  
 
 	
    <footer>
@@ -128,7 +130,7 @@
    </div>
 	   </div>
    </footer>
- 
+  <!-- container-fluid ends here after all content --> 
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 <script src="js/jquery-1.11.3.min.js"></script>
